--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,7 +2,7 @@
 inventory = ./inventory
 remote_user = wave
 ask_pass = false
-roles_path = /home/ubuntu/ansible/roles
+roles_path = ./roles
 
 [privilege_escalation]
 become = true
